--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,7 @@
     "default_icon": "icon.png",
     "default_popup": "index.html"
   },
+  "incognito": "split",
   "permissions": [
     "activeTab"
   ]
