--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "dependencies": {
     "history": "^1.17.0",
+    "react-autocomplete": "^0.1.4",
+    "react-pick": "^0.5.0",
     "react-router": "^1.0.3",
+    "react-typeahead": "^1.1.5",
     "webpack-dev-server": "^1.14.0"
   }
 }
