--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,11 @@
     "default_icon": "icon.png",
     "default_popup": "index.html"
   },
+  "icons": { 
+      "16": "icon.png",
+      "48": "icon.png",
+      "128": "icon.png" 
+  },
   "incognito": "split",
   "permissions": [
     "activeTab",
