--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 2,
 
   "name": "Salesforce Login Helper",
-  "description": "This extension allows you to store login information for your salesforce orgs and open them in a Browser Window",
-  "version": "1.0",
+  "description": "This extension allows you to store login information for your salesforce orgs and open them in a browser Window",
+  "version": "1.2",
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "index.html"
