--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Salesforce Login Helper",
   "description": "This extension allows you to store login information for your salesforce orgs and open them in a browser Window",
-  "version": "1.3",
+  "version": "1.4",
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "index.html"
@@ -16,6 +16,7 @@
   "incognito": "split",
   "permissions": [
     "activeTab",
-    "storage"
+    "storage",
+    "downloads"
   ]
 }
